# NLP_II_Practica2

./: .gitignore  Notebook_P2.ipynb  README.md  main.py  pyproject.toml
src/: __init__.py  compressor.py  data_loader.py  dense_retriever.py  embedding_extractor.py  evaluator.py  explainability.py  hybrid_classifier.py  knn_classifier.py  model_trainer.py  summarizer.py  text_preprocessor.py
