[project]
name = "nlp-ii-practica2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
torch = { index = "pytorch_cu130" }
torchvision = { index = "pytorch_cu130" }
torchaudio = { index = "pytorch_cu130" }

[[tool.uv.index]]
name = "pytorch_cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
